--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="menuContent">
+<ion-menu [content]="menuContent" persistent="true">
     <ion-header>
         <ion-toolbar>
             <ion-title>Menu Principal</ion-title>
@@ -8,7 +8,7 @@
 
     <ion-content>
         <ion-list>
-            <button ion-item  *ngFor="let p of pages" (click)="openPage(loginPage)" menuToggle>
+            <button ion-item  *ngFor="let p of pages" (click)="openPage(p)" menuToggle>
                 <ion-icon name="{{p.icon}}"></ion-icon>
                 {{p.title}}
             </button>
